# docmat

./: LICENSE  README.md  pyproject.toml
src/: docitems.py  main.py
src/docmat/: __init__.py  builders.py  docitems.py  main.py
