[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
    "wheel",
]

[project]
name = "docmat"
description = "Matlab documentation for Sphinx"
readme = "README.rst"
license = { file = "LICENSE.txt" }
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
]
requires-python = ">=3.9"
dependencies = [
]

[project.scripts]
docmat = "docmat:main"
